--- a/pH_Nadel_zu_Laub.Rmd
+++ b/pH_Nadel_zu_Laub.Rmd
@@ -30,30 +30,23 @@ library(sp)
 ```
 
 # Einleitung
-Die Fichte ist in Europa die ökonomisch Wichtigste Nadelbaumart. Seit den 1950er Jahren wird sie sehr intensiv angebaut, weshalb heute in Zentraleuroopa große Fichten-Monokulturen das Waldbild vielerorts prägen. Der schnelle Wuchs und die gute Anpassungsfähigkeit der Baumart hat dafür gesorgt, das sie auch dort gepflanzt wurde, wo sie natürlicherweise nicht vorkommt. Der Fokus von Fichten im Waldbau lässt jedoch nach, da es durch Sturmwurf und Borkenkäfer zu großen Schäden in den Monokulturen kam und kommt (CABI Forertry Compendium - Datasheet Picea abies (https://www.cabi.org/fc/datasheet/41083#56860DFF-FB62-42B0-8E64-9A8874097C80)). Kritik auf den Fokus der Fichte im Waldbau wird auch aufgrund der standortsverschlechternden Eigenschaften des Nadelbaumes ausgeübt. (Bayrische Landesanstalt für Wald und Forstwirtschaft (LBW) (2017). Beiträge zur Fichte, Bericht. 35-40.)
+Die Fichte ist in Europa die ökonomisch Wichtigste Nadelbaumart. Seit den 1950er Jahren wird sie sehr intensiv angebaut, weshalb heute in Zentraleuroopa große Fichten-Monokulturen das Waldbild vielerorts prägen. Der schnelle Wuchs und die gute Anpassungsfähigkeit der Baumart hat dafür gesorgt, das sie auch dort gepflanzt wurde, wo sie natürlicherweise nicht vorkommt. Der Fokus von Fichten im Waldbau lässt jedoch nach, da es durch Sturmwurf und Borkenkäfer zu großen Schäden in den Monokulturen kam und kommt [@CABI]. Kritik auf den Fokus der Fichte im Waldbau wird auch aufgrund der standortsverschlechternden Eigenschaften des Nadelbaumes ausgeübt [@LBW].
 
-Die Fichte verträgt kalkhaltiges Grundgestein - ist aber nicht die heutige potentielle natürliche Vegetation (hpnV) des Schönberg (Untersuchungsgebiet), sondern Fiederzahnwurz- und Perlgras-Buchenwald (Landschaftsplan 2020, Stadt Freiburg im Breisgau, Stand Mai 2006).
+Um den Effekt der Fichte auf dem Boden zu analysieren kann der pH-Wert als Proxi-Größe erhoben werden. Der pH gilt als eine wichtige und aussagekräftige Bodenkenngröße [@Scheffer], es lassen sich Aussagen über Nähr- und Schadstoffe des Bodens, seine Eignung als Pflanzenstandort und über die Bodenorganismen ableiten.
+Aus dieser Grundlage steht dieser Arbeit folgende Hypothese zugrunde:
 
-Standortsverschlechterung durch die Fichte
-Räumlich direkter Effekt, oder im Übergang zum Laubwald verschwommener bzw. kein Einfluss?
-Die Fichte als Standortsfremde baumart wird als Bedrohung für die Artenvielfalt gesehen. Ist dies durch die Bodenversauerung, und die damit einhergehende Veränderung des Standortes zu sauer für die potentiell Natürliche Vegetation am Schönberg?
-
-Beprobung von einzelpunkten im Gelände um den Übergang von Fichte zu Buche auf der Fläche zu interpolieren - wie scharf ist die Grenze?.
-
-Schönber - Vorbergzone
-Hauptrogenstein - Kalkoolith, ein Kalkgestein des milleren Jura. 
-
-Der pH gilt als eine wichtige und aussagekräftige Bodenkenngröße (@Scheffer).
-
-```{r cars, message=FALSE, warning=FALSE, include=FALSE, paged.print=FALSE}
-wordcountaddin::text_stats("pH_Nadel_zu_Laub.Rmd")
-```
+> Der Boden-pH-Wert im Fichtenbestand ist niedriger als im Laubmischwald, was auch an der dort vorkommenden Bodenvegetation erkennbar ist.
+> Dieser Einfluss ist auf einer Fläche, wo ein Fichtenbestand mit einer markanten Grenzlinie
+an Laubwald grenzt durch einen räumlichen Gradienten erkennbar.
 
 # Methoden
 Der Zeitliche Rahmen ermöglicht an bis zu 60 Punkten pH-Messungen sowie die Aufnahme der Vegetation. Eine Fläche von 40 mal 50 Metern sollte dazu ausgewählt werden, durch die eine Scharfe Grenze eines Fichten zu Laubbaumbestandes verläuft. Dazu werden die Bestandeskarten im Raum Freiburg betrachtet. Damit der pH-Wert auf der Fläche nicht von unterschiedlichem Grundgestein geprägt ist wird zusätzlich die geologische Karte betrachtet.
-Die Auswahl fällt auf einen ca. 30 Jährigen Fichtenbestand am Schönberg, der an einen etwa gleichalten Buchen-Ahorn-Mischwald angrenzt. Das Grundgestein der Probefläche ist der Hauptrogenstein. 
-Für die Probepunkte wird die Fläche in 10x10m Quadrate eingeteilt, worein jeweils drei zufällige Probepunkte gelegt werden. Um die Position der Punkte zu wählen werden mit der Software R (@R) 60 zufällige Winkel und Entfernungen gezogen. So werden der Reihe nach vom Mittelpunkt jedes Quadrates aus, jeweils drei Positionen für die Probenahme bestimmt.
-```{r}
+Die Auswahl fällt auf einen ca. 30 Jährigen Fichtenbestand am Schönberg auf ca. 520 m über NN, der an einen etwa gleichalten Buchen-Ahorn-Mischwald angrenzt (siehe Abb. \ref{karte1}). Bei dem Waldbestand handelt es laut Herr Bucher, dem Revierförster wahrscheinlich um eine Erstaufforstung. Vereinzelte Baumscheiben lassen auf die ehemalige Nutzung als Waldweide schließen, zudem lässt sich Terrassierung im Gelände erahnen weshalb auch eine ehemalige landwirtschaftliche Nutzung nicht auszuschließen ist. Die potentielle natürliche Vegetation der Fläche ist ein Waldmeister-Buchenwald, örtlich mit Orchideen-Buchenwald, Wucherblumen-Eschen-Hainbuchenwald sowie Weißseggen-Winterlindenwald [@pnv].
+Der Schönberg gehört zur Vorbergzone des Schwarzwald und hat auf der Probefläche als Grundgestein Hauptrogenstein. Der Hauptrogenstein, ein Gestein des Mitteljura (Dogger), ist ein oolithischer Kalkstein. Laut @Koerner (S. 57) handelt es sich auf diesem Gestein um Rendzinen mit einem hohen pH-Wert, der meist über dem Neutralpunkt liegt.
+
+Für die Probepunkte wird die 50 x 40 m große Fläche in Quadrate von 10 x 10 m eingeteilt, worein jeweils drei zufällige Probepunkte gelegt werden. Um die Position der Punkte zu wählen werden mit der Software R [@R] 60 zufällige Winkel und Entfernungen gezogen. Die zufälligen Punkte sind Grundbedingung für die (geo)statistische Auswertung um ungerichtete Schätzer zu gewährleisten [@geostat]. So werden der Reihe nach vom Mittelpunkt jedes Quadrates aus, jeweils drei Positionen für die Probenahme bestimmt.
+
+```{r punkte}
 ## Veränderung des BodenpH und der Vegetation im Übergang von Nadel zu Laubwald
 set.seed(1)
 ## zufällige punkte generieren:
@@ -77,22 +70,21 @@ tab <- tab %>%
   filter(x > 1 & x < 7)
 ```
 
-Die Fläche wird im Feld aufgesucht und die genaue Position wird dort festgelegt, wo der Anteil der Fichten im über die Bestandeskarte ausgewählten Fichtenbestand am größten ist und seine Grenze zum Laubwald am markantesten ist. Mittels Kompass, Maßband und Peilstab wird die Fläche vermessen und die Ecken markiert. Die Ausrichtung der Fläche verläuft hangparallel, was einer relativ genauen Nord-Süd-Ausrichtung (3°-183°) entspricht. 
+Die Fläche wird im Feld aufgesucht und die genaue Position wird dort festgelegt, wo der Anteil der Fichten im über die Bestandeskarte ausgewählten Fichtenbestand am größten ist und seine Grenze zum Laubwald am markantesten ist. Mittels Kompass, Maßband und Peilstab wird die Fläche vermessen und die Ecken markiert. Die Ausrichtung der Fläche verläuft hangparallel, was einer relativ genauen Nord-Süd-Ausrichtung (3°-183°) entspricht. Auf der nördlichen Hälfte dominiert *Picea abies*, auf der südlichen Hälfte steht ausschließlich Laubwald mit *Fagus sylvatica*, *Acer pseudoplatanus*, *Tilia platyphyllos* und *Fraxinus excelsior*.
 
-![Die Probefläche und ihre Position im Wald. Die Fichten stehen in der nördlichen Hälfte der Probefläche, im südlichen Teil ist reiner Laubwald. Der Hang neigt sich leicht nach Osten hin abwärts.](Karte1.jpeg)
+![Die Probefläche und ihre Position im Wald. Die Fichten stehen in der nördlichen Hälfte der Probefläche, im südlichen Teil ist reiner Laubwald. Der Hang neigt sich leicht nach Osten hin abwärts. \label{karte1} ](Karte1.png)
 
+Ebenso werden mithilfe des Kompass, peilend, die genauen Probepositionen ausegwählt. 
+An jedem Probepunkt wird eine Bodenprobe in ca. 5 cm Tiefe genommen und nach der Bodenkundlichen Kartieranleitung [@kartieranleitung] präpariert. Zusätzlich wird an jedem Punkt die Humusform erfasst, der Bedeckungsgrad der überschirmenden Baumarten, je Art, im Umkreis mit $2 m$ radius. Auch die Bodenvegetation wird im Umkreis von 2m erfasst (Arten und Deckungsgrad). 
+Der pH-Wert der Bodenproben wird sobald ca. 10 Proben bereit sind (Substrat hat sich abgesetzt) mit der pH-Sonde des Typ GMH 5520 des Herstellers Greisinger, hergestellt in Deutschland, gemessen. Die Genauigkeit der Gerätes beträgt laut Hersteller $+-0.005 pH$. Zu beginn der ersten Messung jedes Tages wird das Gerät wie in der Betriebsanleitung beschrieben kalibriert.
 
-Ebenso werden mithilfe des Kompass, peilend, die genauen Probepositionen ausegwählt. An jedem Probepunkt wird eine Bodenprobe in ca. 5 cm Tiefe von ca. 10 ml Volumen genommen. Die Probe wird mit 20 ml destilliertem Wasser vermischt, geschüttelt und stehen gelassen damit sich die Partikel am Grund des Probefläschchens absetzten. Zusätzlich wird an jedem Punkt die Humusform erfasst, der Bedeckungsgrad der überschirmenden Baumarten, je Art, im Umkreis mit $2 m$ radius. Auch die Bodenvegetation wird erfasst (Arten und Deckungsgrad). Es sind nur krautige Pflanzen vorhanden, es gibt keine Verjüngung im Bestand, die größer ist als $20 cm$. 
-Der pH-Wert der Bodenproben wird sobald ca. 10 Proben bereit sind (Substrat hat sich abgesetzt) mit der pH-Sonde des Typ GMH 5520 des Herstellers Greisinger gemessen. Die Genauigkeit der Gerätes beträgt laut Hersteller $+-0.005 pH$. Zu beginn der ersten Messung jedes Tages wird das Gerät wie in der Betriebsanleitung beschrieben kalibriert.
+Die Auswertung der Daten erfolgt in R [@R], dabei werden die Pakete "MASS" [@mass - Varianzanalyse], "dplyr" [@dplyr - Datenformatierung], "gstat" [@gstat - geostatistik] und "sp" [@sp - geostatistik]  angewendet. Der R-Code befindet sich im Anhang der Arbeit. 
 
-Statistische auswertung:
+Die Fläche wird zunächst in die beiden Klassen "Nadelbaum" und "Laubbaum" eingeteilt. Alle Probepunkte die von Fichten oder Lärchen überschirmt sind werden in die Klasse "Nadelbaum" eingeteilt, Flächen auf denen $0 \%$ Nadelbaum vorhanden ist werden in die Klasse "Laubbaum" eingeteilt. Um die beiden Klassen zu vergleichen wird eine Varianzanalyse nach @Dormann durchgeführt. Da der Test über die Varianzenhomogenität signifikant unterschiedliche Varianzen für die pH-Werte der beiden Klassen liefert, und damit eine der Vorrausetzungen für eine ANOVA verletzt sind, wird der Kruskal-Wallis-Test (p<0,01) durchgeführt.
 
-Die aufgenommenen Daten werden in R ausgewertet. Die Fläche wird in die beiden Klassen "Nadelbaum" und "Laubbaum" eingeteilt. Alle Probepunkte die von Fichten oder Lärchen überschirmt sind werden in die Klasse "Nadelbaum" eingeteilt, Flächen auf denen 0 % Nadelbaum vorhanden ist werden in die Klasse "Laubbaum" eingeteilt. Um die beiden Klassen zu vergleichen wird eine Varianzanalyse (ANOVA) nach @Dormann durchgeführt. Da der Test über die Varianzenhomogenität signifikant unterschiedliche Varianzen für die pH-Werte der beiden Klassen liefert, und damit eine der Vorrausetzungen für eine ANOVA verletzt sind, wird zusätzlich der Kruskal-Wallis-Test (p<0,01) durchgeführt.
+Eine räumliche betrachtung der pH-Werte erfolgt mittels einem Variogramm, einer geostatistischen Methode zur Analyse der Varianz. Um den pH-Wert über die Fläche zu interpolieren ("kriging") wird ein Modell an das Variogram gefittet. Die Interpolation kann dann graphisch gemeinsam mit den Baumartenanteilen der Punkte dargestellt werden um den pH-Gradienten im Übergang von Fichten- zu Laubwald aufzuzeigen.
 
-Eine räumliche Analyse der pH-Werte erfolgt mittels einem Variogramm, welches die Varianz in Abhängigkeit der Entfernung der Punkte darstellt. Um den pH-Wert über die Fläche zu interpolieren ("kriging") wird ein Modell an das Variogram gefittet. Die Interpolation kann dann graphisch gemeinsam mit den Baumartenanteilen der Punkte dargestellt werden.
-
-Analyse der Vegetation:
-Zu allen aufgenommenen Arten werden die Zeigerwerte "Reaktionszahl" und "Lichtzahl" nach Ellenberg herausgesucht. Für jeden Punkt wird dann der Mittelwert der Reaktions- sowie Lichtzahl aller dort vorkommenden Arten (unabhängig von der Häufigkeit) berechnet. Um festzustellen ob ein Zusammenhang der Vegetation mit dem pH-Wert des Bodens besteht wird geprüft ob Zeigerwerte und pH-Werte korrelieren. Für beide Zeigerwerte wird zudem ein Variogramm berechnet.
+Mittels dem Fisher-Test auf Assoziation wird der Zusammenhang von Baumart und Humusform untersucht. Des weiteren werden zu allen aufgenommenen Pflanzenarten die Zeigerwerte "Reaktionszahl" und "Lichtzahl" nach Ellenberg herausgesucht. Für jeden Punkt wird dann der Mittelwert der Reaktions- sowie Lichtzahl aller dort vorkommenden Arten (unabhängig von der Häufigkeit) berechnet. Um festzustellen ob ein Zusammenhang der Vegetation mit dem pH-Wert des Bodens besteht wird geprüft ob Zeigerwerte und pH-Werte korrelieren.
 
 # Ergebnisse
 
@@ -105,38 +97,55 @@ data <- data %>%
 
 data1 <- left_join(tab, data, by="id")
 data1 <- data1 %>% 
-  mutate(Baumart = ifelse( as.numeric(paste0(x, y))<=42, "Fi", "Bu" )) %>% 
   mutate(Nadelbaum = Fichte + Lärche, 
          Laubbaum = Buche + Bergahorn + Sommerlinde + Esche) %>% 
   mutate(Anteil_Nadelbaum = Nadelbaum/(Nadelbaum + Laubbaum))%>% 
-  mutate(pH = as.numeric(pH))
+  mutate(Baumart = ifelse(Anteil_Nadelbaum > 0, "Fi", "Bu" )) %>% 
+  mutate(pH = as.numeric(pH)) 
 
 vegetation <- read_excel("vegetation1.xlsx")
 zeigerwerte <- read_excel("vegetation1.xlsx", sheet = 2)
 ```
 
 
-```{r varianzanalyse, fig.cap="Die kumulative Dichteverteilung des pH-Wertes (links) und ein Boxplot der beiden Klassen 'Nadelwald' und 'Laubwald' (rechts).\\label{aov}"}
+```{r varianzanalyse, warning=FALSE, message = FALSE, fig.cap="Die kumulative Dichteverteilung des pH-Wertes (links) und ein Boxplot der beiden Klassen 'Nadelwald' und 'Laubwald' (rechts).\\label{aov}"}
 #kumulative Darstellung und Vergleich mit Normalverteilung
 library(MASS)
 fit.norm <- fitdistr(data1$pH,"normal")
 
 par(mfrow=c(1,2), mar=c(4,5,4,0.5))
-plot(ecdf(data1$pH), pch="", verticals=T, las=1,main="Normalverteilung", xlab="pH", cex.lab=1.5)
-curve(pnorm(x, mean=fit.norm$estimate[1], sd=fit.norm$estimate[2]), add=T,lwd=3, col="grey")
-lines(ecdf(data1$pH), pch="", verticals=T) # passt gut !
+plot(ecdf(data1$pH), pch="", verticals=T, las=1,
+     main="Normalverteilung", xlab="pH", cex.lab=1.5)
+curve(pnorm(x, mean=fit.norm$estimate[1], sd=fit.norm$estimate[2]), 
+      add=T,lwd=3, col="grey") # passt gut !
 
 #KStest
-ks.test(data1$pH, "pnorm", fit.norm$estimate[1],+ fit.norm$estimate[2]) # interpretation ?
+ks <- ks.test(data1$pH, "pnorm", fit.norm$estimate[1],+ fit.norm$estimate[2]) 
 
 # Visuelle Darstellung
-boxplot(data1$pH[which(data1$Anteil_Nadelbaum > 0)], data1$pH[which(data1$Anteil_Nadelbaum <= 0)], ylab="pH-Wert", names=c("Nadelwald","Laubwald"))
+boxplot(
+  data1$pH[which(data1$Baumart == "Fi")], data1$pH[which(data1$Baumart == "Bu")], 
+  ylab="pH-Wert", names=c("Nadelwald","Laubwald")
+)
+
+# Test auf Varianzhomogenität
+varFi <- var(data1$pH[which(data1$Baumart=="Fi")]) 
+varBu <- var(data1$pH[which(data1$Baumart=="Bu")]) #groeßerer Wert
+diff <- varBu/varFi
+
+pfTest <- pf(diff, 32, 26, lower.tail=F) #größer als 0,025 
+# -> Varianzen der Gruppen unterscheiden sich signifikant 
+pHvartest <- var.test(data1$pH[which(data1$Baumart=="Bu")],data1$pH[which(data1$Baumart=="Fi")]) 
+#p-value sind nicht signifikant heterogen
+
+#Kruskal-Wallis-Test
+data1$Baumart <- as.factor(data1$Baumart)
+pHkruskal <- kruskal.test(pH ~ Baumart, data=data1)
 ```
 
-Die gemessenen pH-Werte unter Fichte liegen mit einem Minimum von 5,58 pH und einem Maximum von 7,47 pH im mäßig sauren bis schwach alkalischen Bereich, während im Buchen-Bergahorn-Mischwald mit einem Minimum von 6,44 pH und einem Maximum von 8,48 pH schwach saure bis mäßig alkalische pH-Werte gemessen wurden.
-Ein Kolmogorov-Smirnov-test und die kumulative Dichteverteilung der pH-Werte (Abbildung \ref{aov} links) bestätigen, dass die Daten normalverteilt sind. Da die Varianzhomogenität der Daten verletzt ist wird ein Kruskal-Wallis-Test durchgeführt. Dieser zeigt einen Signifikanten Unterschied des pH-Wertes zwischen den beiden Klassen auf. Der pH-Wert des Oberboden im von Fichten geprägten Standort beträgt im Durchschnitt nur 6.64 ± 0,49 pH, im Buchen-Bergahorn-Mischwald ist er mit 7.35 ± 0,54 pH deutlich höher (Siehe Abb. \ref{aov} rechts).
+Ein Kolmogorov-Smirnov-test und die kumulative Dichteverteilung der pH-Werte (Abbildung \ref{aov} links) bestätigen, dass die Daten normalverteilt sind. Der Kruskal-Wallis-Test zeigt mit einem p-Wert von 6,391e-06 einen signifikanten Unterschied des pH-Wertes zwischen den beiden Baumartenklassen auf. Der pH-Wert des Oberboden im von Fichten geprägten Standort beträgt im Durchschnitt nur 6,64 ± 0,49 pH, im Buchen-Bergahorn-Mischwald ist er mit 7,35 ± 0,54 pH deutlich höher (Siehe Abb. \ref{aov} rechts). Somit liegen die pH-Werte im Nadelwald im mäßig sauren bis schwach alkalischen Bereich, während während im Laubwald schwach saure bis mäßig alkalische pH-Werte gemessen wurden.
 
-Die räumliche Varianz des pH-Wertes ist in Abbildung \ref{variogram} durch ein Variogram dargestellt. In der Abbildung ist auch das gefittete exponentielle Modell dargestellt. Es wird das exponentielle Model verwendet, da es visuell am besten an die Daten passt. Es zeigt sich, dass die Varianz der pH-Werte für nahegelegene Punkte gering ist und mit größeren Entfernungen zunimmt. Je weiter die Entfernung zu nimmt, desto geringer ist die zunahme der Varianz. Stellt sich im Variogramm in einer bestimmten Entfernung ein Schwellenwert ein ("sill variance"), so bedeutet dies, dass Punkte mit einer solchen Entfernung zueinander unabhängig sind.
+Die räumliche Varianz des pH-Wertes ist in Abbildung \ref{variogram} durch ein Variogram dargestellt. In der Abbildung ist auch das gefittete exponentielle Modell dargestellt. Es wird das exponentielle Model verwendet, da es visuell am besten an die Daten passt. Die Darstellung zeigt die Varianz des pH-Wertes in Abhängigkeit der Entfernung zwischen den Punkten. Es zeigt sich, dass die Varianz der pH-Werte für nahegelegene Punkte gering ist und mit größeren Entfernungen zunimmt. Je weiter die Entfernung zunimmt, desto geringer ist die Zunahme der Varianz. Stellt sich im Variogramm in einer bestimmten Entfernung ein Schwellenwert ein ("sill variance"), so bedeutet dies, dass Punkte mit einer solchen Entfernung zueinander unabhängig sind.
 
 ```{r variogram, fig.cap="Variogram des pH-Wertes (Punkte) und gefittetes exponentielles Modell (Linie). Es zeigt, dass die Varianz der Punkte mit zunehmender Entfernung größer wird. \\label{variogram}"}
 geodat <- data1
@@ -149,9 +158,9 @@ fit_vgm <- fit.variogram(vgm_pH, vgm(model = "Exp"))
 plot(vgm_pH, fit_vgm, xlab="Distanz in m", ylab="Semivarianz")
 ```
 
-Das gefittete Model wird verwendet um den pH-Wert der gesamten Fläche zu interpolieren. Das Ergebnis ist in Abbildung \ref{interpol} dargestellt. Der pH erreicht dort wo die Fichte als hauptbestandteil des Nadelholzes steht mit unter pH 6 die Tiefsten Werte. Die höchsten Werte des pH sind im Laubwaldbestand gemessen worden. Die pH-Werte der beiden Bestände unterscheiden sich, die Grenze zwischen Nadel und Laubwaldbestand ist jedoch nicht als deutliche Linie zu erkennen, sondern hat vielmehr einen verschwommenen Übergang.  
+Das gefittete Model wird verwendet um den pH-Wert der gesamten Fläche zu interpolieren. Das Ergebnis ist in Abbildung \ref{interpol} dargestellt. Der pH erreicht dort wo die Fichte steht, als Hauptbestandteil des Nadelholzes, mit unter pH 6 die tiefsten Werte. Die höchsten Werte des pH sind im Laubwaldbestand gemessen worden. Die pH-Werte der beiden Bestände unterscheiden sich, die Grenze zwischen Nadel und Laubwaldbestand ist jedoch nicht als deutliche Linie zu erkennen, sondern hat vielmehr einen diffusen Übergang.  
 
-```{r kriging, fig.cap="Interpolation des pH-Wertes über die Probefläche (40 x 50 m). Norden ist links im Bild, Süden rechts. Der Anteil der Nadelbäume im Umkreis von 2m um jeden Probepunkt ist durch die Größe der schwarzen Punkte dargestellt. Die Nadelbäume sind fast ausschließlich Fichten, nur eine Lärche steht auf der Probefläche. Die Laubbäume sind in verschiedenen Anteilen Buche, Bergahorn, Esche und Linde. \\label{interpol}"}
+```{r kriging, warning = FALSE, message = FALSE, fig.cap="Interpolation des pH-Wertes über die Probefläche (40 x 50 m). Norden ist links im Bild, Süden rechts. Der Anteil der Nadelbäume im Umkreis von 2m um jeden Probepunkt ist durch die Größe der schwarzen Punkte dargestellt. Die Nadelbäume sind fast ausschließlich Fichten, nur eine Lärche steht auf der Probefläche. Die Laubbäume sind in verschiedenen Anteilen Buche, Bergahorn, Esche und Linde. \\label{interpol}"}
 grid <- makegrid(geodat, cellsize = 0.5)
 #grid <- SpatialPoints(grid)
 coordinates(grid) <- ~x1 + x2
@@ -167,26 +176,30 @@ pH_kriged %>% as.data.frame %>%
   geom_point(data = data1, aes(x_coord, y_coord, size = Anteil_Nadelbaum)) 
 ```
 
-Für die Reaktionszahl (Zeigerwert nach Ellenberg aus @Rothmaler) der Vegetation der Krautschicht wird keine Korrelation mit dem pH-Wert festgestellt. Die Lichtzahl korreliert ebenfalls nicht mit dem pH-Wert. Von den 37 erfassten Arten kommen viele Arten nur vereinzelt vor, einige wenige wie *Viola reichenbachiana* und *Hedera helix* Flächig.  
+Die Humusform der Probefläche unterscheidet sich laut Fisher-Test signifikant zwischen Nadel- und Laubwald. Im Laubwald kommt überwiegend L-Mull vor, im Nadelwald überwiegend F-Mull.
 
-"In the classical approach random selection is essential to guarantee unbiased
-estimates with known variance." [@geostat]
-
-Die praktische Geostatistik behandelt die Ergebnisse so, als wären sie die Ergebnisse von korrelierten Zufallsprozessen [@geostat, p.11]
-
-Punkte sind ungleichmäßig Verteilt in zwei dimensionen. Sample-variogram experimental variogram
-Das Variogram erreicht tendiert gegen eine Schwellen-Varianz ("sill varianz"). Diese gleicht der gesamten Varianz des Datensatzes. Ist die Schwelle erreicht, so bedeutet das, dass Punkte die in solch einer Entfernung zu einem andern Punkt liegen nicht mehr von diesem beeinflusst werden. Wir können in unserem Beispiel jedoch von Anisotropie ausgehen (Richtungsabhängigkeit). Dies ist 
-
+Es wurden insgesamt 37 Arten in der Bodenvegetation aufgenommen. Es sind krautige Pflanzen und Verjüngung, die kleiner ist als 20 cm. Die Deckungsgrad der Bodenvegetation beträgt im Mittel nur $5\%$, wobei die Bedeckung im Nadelbestand geringer ist als im Laubbestand.
+Für die Reaktionszahl (Zeigerwert nach Ellenberg aus @Rothmaler) der Vegetation der Krautschicht wird keine Korrelation mit dem pH-Wert festgestellt. Die Lichtzahl korreliert ebenfalls nicht mit dem pH-Wert. Von den 37 erfassten Arten kommen einige wenige wie *Viola reichenbachiana* und *Hedera helix* flächig vor, viele weitere Arten nur vereinzelt. Beispielsweise kam *Cephalanthera rubra*  fünf mal vor, viermal davon im Nadelwald.  
 
 # Diskussion
 Laut @Koerner (S. 57) handelt es sich bei den Böden auf Hauptrogenstein am Schönberg um humusreiche flachgründige Böden (Rendzinen) mit einem hohen pH-Wert, der meist über dem Neutralpunkt liegt. Solche pH-Werte konnten wir unter dem Laubwaldbestand feststellen, jedoch nicht unter dem Nadelbestand. Da die Fichte Standortsfremd ist  und nicht der potentiell natürlichen Vegetation (PNV) des Schönbergs entspricht ist anzunehmen, dass der erst ca. 30 Jahre alte Fichtenbestand den pH-Wert des Oberbodens dem mit Mittleren pH-Wert von $6,6 \ pH$ bereits von seinem natürlichen Zustand abgesengt hat. Dem Zugrunde liegt jedoch die Annahme, das die Fläche vor der Bepflanzung mit Fichte und Buche einheitlich als Waldweide mit Baumarten der PNV genutzt wurde.
 
-Dass die Fichte die Bodenversauerung bestärkt ist bekannt (Quelle...)
+Die absenkung des pH-Wertes im Oberboden auf der Fichten-dominierten Fläche kann durch den von der Baumart bedingten erhöhten Säureeintrag erklärt werden. Nadelbäume haben aufgrund ihrer ganzjährigen Benadelung und großen Blattoberfläche eine hohe Interzeption und filtern so organische Säuren (vor allem anthropogenen Ursprungs) aus der Atmosphäre [@Scheffer].
+@Matzner stellten unter Fichte sogar etwa doppelt so hohe Depositionsraten von Protonen fest wie unter Buche. Auch die schwer zersetzbare Streu der Fichte verstärkt den Säureeintrag in den Boden und führt zur Bildung der Humusform F-Mull.
 
-Während die Fichtenstreu sich bereits auf den pH-Wert des Bodens ausgewirkt hat, so zeigt sich dies noch nicht in den Zeigerwerten der Bodenvegetation. Dies liegt daran, dass Zeigerwerte nicht nur den physiologischen Anspruch der Pflanze darstellen, sondern eine relative Standortskonstanz. Der Standort der Pflanze wird von vielen Faktoren beeinflusst, unter anderem Konkurrenz und Kooperation (@Wilmanns). Die kleinräumige Heterogenität der beschattenden Baumarten (Nadelbäume = ganzjährig weniger Licht), fehlende Konkurrenz und der starke Verbiss im Bestand wirkt sich wahrscheinlich auch auf die vorkommenden Arten aus. Ein weiterer Einflussfaktor auf die Vegetation stellt wahrscheinlich die ehemalige Nutzung als Waldweide dar. Beispielsweise haben wir an vielen Orten *Ilex aquifolium* in der Verjüngung vorgefunden, was laut @Koerner (S. 87) eine Erinnerung an die Zeit der Waldweide ist.
+räumliche Analyse -> gerichtete Abhängigkeit im Raum noch mit einbeziehen.
+interpolation -> gam
+
+Punkte sind ungleichmäßig Verteilt in zwei dimensionen. Sample-variogram experimental variogram
+Das Variogram erreicht tendiert gegen eine Schwellen-Varianz ("sill varianz"). Diese gleicht der gesamten Varianz des Datensatzes. Ist die Schwelle erreicht, so bedeutet das, dass Punkte die in solch einer Entfernung zu einem andern Punkt liegen nicht mehr von diesem beeinflusst werden. Wir können in unserem Beispiel jedoch von Anisotropie ausgehen (Richtungsabhängigkeit). Dies ist 
+
+Während die Fichtenstreu sich bereits auf den pH-Wert des Bodens ausgewirkt hat, so zeigt sich dies noch nicht in den Zeigerwerten der Bodenvegetation. Dies liegt daran, dass Zeigerwerte nicht nur den physiologischen Anspruch der Pflanze darstellen, sondern eine relative Standortskonstanz. Der Standort der Pflanze wird von vielen Faktoren beeinflusst, unter anderem Konkurrenz und Kooperation [@Wilmanns]. Die kleinräumige Heterogenität der beschattenden Baumarten (Nadelbäume = ganzjährig weniger Licht), fehlende Konkurrenz und der starke Verbiss im Bestand wirkt sich wahrscheinlich auch auf die vorkommenden Arten aus. Ein weiterer Einflussfaktor auf die Vegetation stellt wahrscheinlich die ehemalige Nutzung als Waldweide dar. Beispielsweise haben wir an vielen Orten *Ilex aquifolium* in der Verjüngung vorgefunden, was laut @Koerner (S. 87) eine Erinnerung an die Zeit der Waldweide ist.
 Um den Unterschied der Vegetation auf Standorten mit einem pH-Wert Unterschied von nur 2 pH festzustellen, so müssten größere Flächen, die räumlich voneinander getrennt sind untersucht werden. Mit größeren Stichproben wäre dann zu erwarten, dass sich ein Unterschied in den vorkommenden Pflanzengesellschaften zeigt.
 
 # Literatur
 <div id="refs"></div>
 
 # Anhang {-}
+
+```{r, ref.label=knitr::all_labels(),echo=TRUE,eval=FALSE}
+```
